
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.adviento.atuservicio.PanelCL">
    <item
        android:id="@+id/Modificar"
        android:icon="@drawable/lapicero"
        android:orderInCategory="101"
        android:title="@string/modificar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/Acerca"
        android:orderInCategory="102"
        android:title="@string/acerca"
        app:showAsAction="never" />

    <item android:id="@+id/Creador"
          android:icon="@drawable/masitem"
          android:title="@string/añadir"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"
        />
</menu>