<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/Naranja25"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/Naranja25"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/TVX2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left|center_horizontal"
                android:layout_weight="1.5"
                android:text="@string/app_name"
                android:textColor="@color/Fucsia100"
                android:textSize="35sp"
                android:textStyle="normal|bold|italic"
                />

            <TextView
                android:id="@+id/TVX3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left|center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight="1.5"
                android:text="@string/Cliente"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Cortina1"
                        style="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/ETX1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/Nombre"
                            android:inputType="textCapSentences"
                            android:singleLine="true"
                            android:textColor="@color/Lila125"
                            android:textColorHint="#d06c7083"
                            android:textSize="24sp"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Cortina2"
                        style="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/ETX2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/Apellido"
                            android:inputType="text|textCapSentences"
                            android:singleLine="true"
                            android:textColor="@color/Lila125"
                            android:textColorHint="#d06c7083"
                            android:textSize="24sp"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Cortina3"
                        style="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/ETX3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/Celular"
                            android:numeric="integer"
                            android:singleLine="true"
                            android:textColor="@color/Lila125"
                            android:textColorHint="#d06c7083"
                            android:textSize="24sp"/>
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/BTNX1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/redondeadoazuloscuro"
                android:text="@string/OK"
                android:textColor="@color/Naranja50"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                android:visibility="visible"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/Progress10"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:elevation="10dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/LL25"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IMV10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icono"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>